<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <ImageView
                android:id="@+id/img_item_picture"
                android:layout_width="180dp"
                android:layout_height="240dp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toStartOf="@+id/detail_title"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintVertical_bias="0.0"
                tools:src="@drawable/one_piece" />

            <TextView
                android:id="@+id/bar_title"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/anime_title"
                android:textSize="16sp"
                android:textStyle="bold"
                card_view:layout_constraintStart_toEndOf="@+id/img_item_picture"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/anime_title"
                android:textSize="16sp"
                card_view:layout_constraintStart_toEndOf="@+id/img_item_picture"
                card_view:layout_constraintTop_toBottomOf="@+id/bar_title" />

            <TextView
                android:id="@+id/bar_genre"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/genre"
                android:textSize="16sp"
                android:textStyle="bold"
                card_view:layout_constraintStart_toEndOf="@+id/img_item_picture"
                card_view:layout_constraintTop_toBottomOf="@+id/detail_title" />

            <TextView
                android:id="@+id/detail_genre"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/genre"
                android:textSize="16sp"
                card_view:layout_constraintStart_toEndOf="@+id/img_item_picture"
                card_view:layout_constraintTop_toBottomOf="@+id/bar_genre" />

            <TextView
                android:id="@+id/bar_rating"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/rating"
                android:textSize="16sp"
                android:textStyle="bold"
                card_view:layout_constraintStart_toEndOf="@+id/img_item_picture"
                card_view:layout_constraintTop_toBottomOf="@+id/detail_genre" />

            <TextView
                android:id="@+id/detail_rating"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/rating"
                android:textSize="16sp"
                card_view:layout_constraintStart_toEndOf="@+id/img_item_picture"
                card_view:layout_constraintTop_toBottomOf="@+id/bar_rating" />

            <TextView
                android:id="@+id/bar_synopsis"
                android:layout_width="355dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/synopsis"
                android:textSize="16sp"
                android:textStyle="bold"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/img_item_picture" />

            <TextView
                android:id="@+id/detail_synopsis"
                android:layout_width="355dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/synopsis"
                android:textSize="16sp"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/bar_synopsis" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>
